--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-        <h1>{{title}}</h1>
-        <p>Created by {{name}}</p>
+      {{>header}}
+        <img src="./img/me.png">
+        {{>footer}}
     </body>
 </HTML>
