--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -8,8 +8,7 @@
     </head>
 
     <body>
-      <h1>{{title}}</h1>
-        <img src="./img/me.png">
-        <p>Created by {{name}}</p>
+        {{>header}}
+        {{>footer}}
     </body>
 </HTML>
