Finished adding styling to project in style.css

--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -2,13 +2,18 @@
 
 <HTML>
 
-    <head>
-        <link rel="stylesheet" href="/css/styles.css">
-    </head>
+<head>
+    <title>404</title>
+    <link rel="stylesheet" href="/css/styles.css">
+</head>
 
-    <body>
+<body>
+    <div class="main-content">
         {{>header}}
         <p>{{errorMessage}}</p>
-        {{>footer}}
-    </body>
+    </div>
+
+    {{>footer}}
+</body>
+
 </HTML>
