--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -2,14 +2,19 @@
 
 <HTML>
 
-    <head>
-        <link rel="stylesheet" href="/css/styles.css">
-        <script src="/js/app.js"></script>
-    </head>
+<head>
+    <title>About Me</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    
+</head>
 
-    <body>
-      {{>header}}
-        <img src="./img/me.png">
-        {{>footer}}
-    </body>
+<body>
+    <div class="main-content">
+        {{>header}}
+        <img class="portrait" src="./img/me.png">
+    </div>
+
+    {{>footer}}
+</body>
+
 </HTML>
