--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,13 +2,19 @@
 
 <HTML>
 
-    <head>
-        <link rel="stylesheet" href="/css/styles.css">
-        <script src="/js/app.js"></script>
-    </head>
+<head>
+    <title>Weather</title>
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
+</head>
 
-    <body>
+<body>
+    <div class="main-content">
         {{>header}}
-        {{>footer}}
-    </body>
+        <p>Use this site to check your weather.</p>
+    </div>
+
+    {{>footer}}
+</body>
+
 </HTML>
