--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,20 +1,31 @@
 <!DOCTYPE html>
 
-<HTML>
+<html>
 
 <head>
     <title>Weather</title>
+  
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
 </head>
 
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Use this site to check your weather.</p>
+
+        <p>Use this site to get your weather!</p>
+
+        <form>
+            <input placeholder="Location">
+            <button>Search</button>
+        </form>
+
+        <p id="message-1"></p>
+        <p id="message-2"></p>
     </div>
 
     {{>footer}}
+
+    <script src="/js/app.js"></script>
 </body>
 
-</HTML>
+</html>
